# gaga

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build_local.bat  run_local.bat
.github/workflows/: ci.yml  release.yml
doc/: m8-command-gap-report.md  m8-tracker-commands.md  next-set-of-commands.md  sed-cha-nth-report.md  simple_tracker_spec.md
examples/: README.md  bass_walk.gaga  fx_fine_chime.gaga  fx_master_pulse.gaga  fx_offsets.gaga  fx_pitch_steps.gaga  fx_tempo_switch.gaga  fx_transpose_hook.gaga  fx_volume_swell.gaga  hello_scale.gaga  m8_columns.gaga  twinkle_excerpt.gaga
src/: audio.cpp  audio.hpp  audio_debug.cpp  audio_debug.hpp  diagnostics.cpp  diagnostics.hpp  file_watch.cpp  file_watch.hpp  main.cpp  note.cpp  note.hpp  parser.cpp  parser.hpp  pattern.cpp  pattern.hpp  source_text.cpp  source_text.hpp  synth.cpp  synth.hpp  terminal_display.cpp  terminal_display.hpp  tokenizer.cpp  tokenizer.hpp  transport.cpp  transport.hpp  version.hpp
tests/: audio_debug_tests.cpp  parser_tests.cpp
